Add number of entries to o++

--- a/entries/projects/magicandmachine/33reading.html
+++ b/entries/projects/magicandmachine/33reading.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++31
+    <title>o++33
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>Love as a form of possession, a spiritual experience, a technological insertion, a digital takeover, invisible occupying force with tiny wires, silent feet and beeping only the smallest mice can hear. </p>
+        <p>'Reading about this sort of fictional world is a bit like watching someone play a board game while making up the rules: the temptation is to tiptoe quietly away and leave them to it' 
+            <br><br>
+
+          &nbsp&nbsp&nbsp&nbsp&nbsp- Rob Yates quoting Colin Burrow writing about Ursula K. Le Guin writing 'Always Coming Home' </p>
     </div>
     <div class="leave">
         <p>
