--- a/entries/projects/magicandmachine/34industrialchurch.html
+++ b/entries/projects/magicandmachine/34industrialchurch.html
@@ -6,13 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++31
+    <title>o++34
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>Love as a form of possession, a spiritual experience, a technological insertion, a digital takeover, invisible occupying force with tiny wires, silent feet and beeping only the smallest mice can hear. </p>
+        <p>descent into the catawomb of an industrial church<br><br>
+            graves in the garden indicating you're on the right track<br><br> 
+            sense that the drop into the gloop and cells of the machine<br><br>
+            (there's that frightening pig again, you can't get away from it)<br><br>
+            aided by steam and elevators<br><br>
+            is, of course, a dive into the soul</p>
     </div>
     <div class="leave">
         <p>
