--- a/entries/projects/magicandmachine/4aglitteringdata.html
+++ b/entries/projects/magicandmachine/4aglitteringdata.html
@@ -16,9 +16,9 @@
             <br><br>
             bats and maps and bits and beeps
             <br><br>
-            unplug the ghoul from the underdark 
+            unplug the ghoul from the undergloom 
             <br><br>
-            make sure to take notes on the undertow</p>
+            try to take notes on the undertow</p>
     </div>
     <div class="leave">
         <p>
