--- a/entries/projects/magicandmachine/44onlinevandal.html
+++ b/entries/projects/magicandmachine/44onlinevandal.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../resources/css/magicandmachine.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>o++31
+    <title>o++44
     </title>
 </head>
 
 <body>
     <div class="maintextsection">
-        <p>Love as a form of possession, a spiritual experience, a technological insertion, a digital takeover, invisible occupying force with tiny wires, silent feet and beeping only the smallest mice can hear. </p>
+        <p>an online vandal, getting carried away inverting the colour schemes for digital marketing campaigns, shaving the edges off company logos, then checking social media to see if anyone found it amusing</p>
     </div>
     <div class="leave">
         <p>
