--- a/entries/projects/magicandmachineindex.html
+++ b/entries/projects/magicandmachineindex.html
@@ -11,7 +11,7 @@
 <body>
     <div class="mainlinksection">
         <p>
-            <a href="./magicandmachine/1computergeneration.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/1computergeneration.html">+</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/2colossalcave.html">+</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/3agamehelps.html">o</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/4aglitteringdata.html">+</a>
@@ -56,6 +56,12 @@
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/43apophenia.html">o</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/44onlinevandal.html">+</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/45dwarvenqueen.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/46braudel.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/47wiredchildren.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/48nanopods.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/49imperfectlight.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/50utopia.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/51anchorite.html">o</a>
         </p>
     </div>
     <div class="leave">
