Add and edit entries for o++

--- a/entries/projects/magicandmachine/9drawntothepotential.html
+++ b/entries/projects/magicandmachine/9drawntothepotential.html
@@ -13,7 +13,7 @@
 <body>
     <div class="maintextsection">
         <p>I was drawn to the potentialities of interactive fiction before I knew what any of that / this means.</p>
-        <p>In school I realised that via PowerPoint you could link slides, create a map, a moving world, although one accidental mouse-click could spoil it all, and I soon discovered just how many separate windows into a world you needed in order to make it work, and suddenly the limitations started to creep in.
+        <p>In school I realised that via PowerPoint you could link slides, create a map, a moving world, although one accidental mouse-click could spoil it all. I soon discovered just how many separate windows into a world you needed in order to make it work, and suddenly the limitations started to creep in.
         </p>    
         <p>When you plot a finite path through a world you circumscribe its limits. Describing anything can result in a signal as to where everything ends. You're no longer exploring. You're walking a very thin line, between very high walls. </p>
     </div>
