--- a/entries/projects/magicandmachineindex.html
+++ b/entries/projects/magicandmachineindex.html
@@ -62,6 +62,17 @@
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/49imperfectlight.html">+</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/50utopia.html">o</a>
             &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/51anchorite.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/52livingasacloud.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/53inanotherworld.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/54mainframe.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/55someonedecides.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/56testinggames.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/57bottomofcave.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/58mechanic.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/59monsters.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/60conceptionofgod.html">o</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/61nets.html">+</a>
+            &nbsp&nbsp&nbsp&nbsp&nbsp<a href="./magicandmachine/62animals.html">+</a>
         </p>
     </div>
     <div class="leave">
