Add pocked and dog image

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <br><a href="./entries/frames050522.html">frames050522</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
+            <br><a href="./entries/pocked170123.html">pocked170123</a>
             <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
             <br><a href="./entries/renegadestripes010822.html">renegadestripes010822</a>
@@ -158,6 +159,8 @@
         <div class="imgcontainerportrait"><img src="./resources/images/tui.jpg" alt="tui perched on branch beneath huge tree" id="tuipic"><p>tui bluff</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/purplepalms.jpg" alt="purple palms by waikaremoana" id="palmpic"><p>palm sunday</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/dawnpatrol.jpg" alt="the dogs at dawn" id="dawnpatrolpic"><p>dawn patrol</p></div>
     </div>
 
 </body>
