Add aliencraft, a few images, and make a few edits to +00

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     </div>
     <div class="links">
         <p>
-            <a href="./entries/opticverve/beached161222.html">beached161222</a>
+            <a href="./entries/opticverve/aliencraft160223.html">aliencraft160223</a>
+            <br><a href="./entries/opticverve/beached161222.html">beached161222</a>
             <br><a href="./entries/opticverve/celestiac100622.html">celestiac100622</a>
             <br><a href="./entries/opticverve/coves161022.html">coves161022</a>
             <br><a href="./entries/opticverve/femur291122.html">femur291122</a>
@@ -90,7 +91,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>bomba and beach water by the ink curtain</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>beachwater ink curtain bomba</p></div>
 
         <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
 
@@ -128,7 +129,7 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/cathide.jpg" alt="burrow" id="cathidepic"><p>burrow</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>yellow medici</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>holy yellow passage for the medici</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
 
@@ -161,6 +162,8 @@
         <div class="imgcontainerhigher"><img src="./resources/images/purplepalms.jpg" alt="purple palms by waikaremoana" id="palmpic"><p>palm sunday</p></div>
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/dawnpatrol.jpg" alt="the dogs at dawn" id="dawnpatrolpic"><p>dawn patrol</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/paua.jpg" alt="grid of paua shells" id="pauapic"><p>paua grid</p></div>
     </div>
 
 </body>
