--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
+            <br><a href="./entries/treeavalanche250223.html">treeavalanche250223</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
             <br><a href="./entries/virtualdreamdrive210722.html">virtualdreamdrive210722</a>
             <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a>
