Edit tree avalanches

--- a/entries/treeavalanche250223.html
+++ b/entries/treeavalanche250223.html
@@ -22,9 +22,10 @@
 
 
     <div class="mainentry">
-        <p>When only around 10 per cent of the undergrowth is attached directly to the earth, tree avalanches can occur. Due to a lack of top soil on steep granite, mountain beech will cling to crevasses in the rock face in order to anchor itself. Other trees and shrubs then graft themselves atop this foundation and an interlocking root system keeps the whole woodland pegged to the side of the fjord.</p>
-        <p>If an anchoring tree goes, you could see an entire mountain face shaved of its floral covering, kilometres of trees collapsing like child's play into the lake.</p>
-        <p>An open wound, then a gradual resumption of green. Shrubs and moss form low cushions. Trees will slowly return, tentative and twiggy at first, prodding about in the slippery rock. They need the moss, because moss holds onto moisture when the land can't. Some mosses can hold ten times their weight in water. They form a living reservoir.</p>
+        <p>Due to a lack of top soil on steep granite, mountain beech will cling to crevasses in the rock in order to anchor itself. Other trees and shrubs then graft themselves to this foundation, without necessarily touching the ground themselves. An interlocking root system keeps the whole forest pegged to the side of the fjord.</p>
+        <p>When only around 10 per cent of the undergrowth is attached directly to the earth, avalanches can occur. </p>
+        <p>If an anchoring tree goes, you could see an entire mountain face shaved of its floral covering, kilometres of beech collapsing like child's play into the lake.</p>
+        <p>An open wound, then a gradual resumption of green. Shrubs and moss form low cushions atop the stubborn lichen. Trees will slowly return, tentative and twiggy at first, prodding about in the slippery rock. They need the moss, because moss holds onto moisture when the land can't. Some can hold ten times their weight in water. They are living reservoirs.</p>
         <p>In the forest, in the mountains, everything seems to need everything. Everything is fixing itself in place, being eroded, and being washed away, all at the same time. Everything fights for its place in the sun and its handful of rain. It's difficult to tell how friendly the world really is when all you can see is climbing and clamouring roots.</p>
     </div>
 
