Add walkingblue without images, no publish

--- a/entries/projects/magicandmachine/57bottomofcave.html
+++ b/entries/projects/magicandmachine/57bottomofcave.html
@@ -13,7 +13,7 @@
 <body>
     <div class="maintextsection">
         <p>At the very bottom of the cave system, after we forgot what our fictional world was supposed to look like, after it had come to seem uniform, after we forgot to ask for a description, stopped asking for commentary on what we were supposed to be seeing, after what seemed like years of living without sunlight, and in reality took many weeks to roleplay, we encountered porcelain figures, modelled on ourselves.</p>
-        <p>Promptly, they turned to flesh on our approach. Of course, a battle ensued. We had to fight out mirror images. One of the group found his doppelganger to be ferrel, roaming about on all fours, devilish eyes, casting spells none of us had seen before, like a hairy human insect, untrustworthy, disturbed.</p>
+        <p>Promptly, they turned to flesh on our approach. Of course, a battle ensued. We had to fight our mirror images. One of the group found his doppelganger to be ferrel, roaming about on all fours, devilish eyes, casting spells none of us had seen before, like a hairy human insect, untrustworthy, disturbed.</p>
     </div>
     <div class="leave">
         <p>
