Add windwarp and tallestfall, make a few edits to other pieces

--- a/entries/opticverve/beached161222.html
+++ b/entries/opticverve/beached161222.html
@@ -58,7 +58,7 @@
             On our last evening here we chose to stay close to the water's edge rather than climb the bluff and look out over the bay. I've always preferred the purple distance of moon and mountain, rather than the difficult detail of near tide, but we looked on the dangerous waves from an unusual position, making them, in that shared moment, more captivating than any far horizon that retreats with each successive hill. 
         </p>
         <p>
-            On Napier's waterfront, an elevated walkway has been built above the shingle, designed to stop right at the point where beach and ocean meet. This allow you to look at the line of breaking surf from above, as well as gazing directly along it in both directions, as if you were a drone capturing the repeating impact of two colliding armies.
+            On Napier's waterfront, an elevated walkway has been built above the shingle, designed to stop right at the point where beach and ocean meet. This allows you to look at the line of breaking surf from above, as well as gazing directly along it in both directions, as if you were a drone capturing the repeating impact of two colliding armies.
         </p>
         <p>
             Due to the steep angle of the beach, the surf struggles to gain a foothold for longer than a few moments at a time. It shows itself by a cover of confident froth that then thins and stretches itself back. As it thins, dark patches of stubborn shore reappear, and there are a few seconds where the stretched patterns of the white water form a warped constellation, bringing to mind innumerable particles and innumerable stars, or the clawed, tidal hands of the reaper, pulling ever seawards. There is a small death every time a wave reaches its pebbled grave. 
