--- a/entries/opticverve/walkingblue080323.html
+++ b/entries/opticverve/walkingblue080323.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="images">
-        <div class=" "><img src=" " alt="  "></div>
+        <div class="imgcontainerhigher"><img src="../../resources/images/opticverve/bluewalk1.jpg" alt="mountains at the McKinnon pass"></div>
     </div>
     
     <div class="mainentryimagebreak">
@@ -36,7 +36,7 @@
     </div>
 
     <div class="images">
-        <div class=" "><img src=" " alt="  "></div>
+        <div class="imgcontainerportrait"><img src="../../resources/images/opticverve/bluewalk2.jpg" alt="standing in the river, looking at the hills"></div>
     </div>
 
     <div class="mainentryimagebreak">
@@ -52,19 +52,19 @@
     </div>
 
     <div class="images">
-        <div class=" "><img src=" " alt="  "></div>
+        <div class="imgcontainerhigher"><img src="../../resources/images/opticverve/bluewalk3.jpg" alt="the Clinton valley from the high pass"></div>
     </div>
         
     <div class="mainentryimagebreak">
-        <p>Rebecca Solnit writes about this blue of distance, how that blue is merely a bending of the light. If you were transported over there and looked back, the spot you stoon on just a moment before would be blue. I imagine that humans have gazed at the far blue of mountains and felt a longing to be amongst that distant colour, thousands of years before anyone questioned why they even look that way, why they look like they're calling when things close to us stay quiet.</p>
+        <p>Rebecca Solnit writes about this blue of distance, how that blue is merely a bending of the light. If you were transported over there and looked back, the spot you stood on just a moment before would be blue. I imagine that humans have gazed at the far blue of mountains and felt a longing to be amongst that distant colour, thousands of years before anyone questioned why it even looks that way, why far slopes look like they're calling when things close to us stay quiet.</p>
     </div>
 
     <div class="images">
-        <div class=" "><img src=" " alt="  "></div>
+        <div class="imgcontainerportrait"><img src="../../resources/images/opticverve/bluewalk4.jpg" alt="a walkway through the valley"></div>
     </div>
 
     <div class="mainentry">
-        <p>I try to remember, especially when I find myself at the high and wondrous edges of the world, that anywhere we stand looks blue from a distance. I should want to be here. I should be climbing to keep still.</p>
+        <p>I try to remember, especially when I find myself at the high and wondrous edges of the world, that anywhere we stand looks blue from afar. I should want to be here. I should be climbing to keep still.</p>
     </div>
 
     <div class="dateentry">
