--- a/entries/prometheanparty240622.html
+++ b/entries/prometheanparty240622.html
@@ -26,7 +26,7 @@
             Vision after mishearing a voice on an electronica mix curated by Moderat. 
         </p>
         <p>
-            Vision of Promethean figure chained to the exposed stack of an industrial power plant, possibly nuclear, a vacant reek coming from the vast chimney, no steam or smoke, the complex clearly disused as the desert surrounding it on all sides.
+            Vision of Promethean figure chained to the exposed stack of an industrial power plant, possibly nuclear, a vacant reek coming from the vast chimney, no steam or smoke, the complex clearly as disused as the desert surrounding it on all sides.
         </p>
         <p>
             The desert wriggles purple-red. Nothing moves except convection, or the quivering of an eye faced with too little shade. The Promethean figure himself has probably been punished for something predictable - playing around with fusion reactors, inventing unnatural diets, writing hymns that ruin the ceremonies they're meant to save.
