--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
+            <br><a href="./entries/tallestfall090323.html">tallestfall090323</a>
             <br><a href="./entries/treeavalanche250223.html">treeavalanche250223</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
             <br><a href="./entries/virtualdreamdrive210722.html">virtualdreamdrive210722</a>
             <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a>
+            <br><a href="./entries/windwarp180323.html">windwarp180323</a>
             <br><a href="./entries/yachts070722.html">yachts070722</a>
         </p>
     </div>
@@ -67,6 +69,7 @@
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
             <br><a href="./entries/opticverve/pacificdrapes121022.html">pacificdrapes121022</a>
             <br><a href="./entries/opticverve/unfamiliarpark020922.html">unfamiliarpark020922</a>
+            <br><a href="./entries/opticverve/walkingblue080323.html">walkingblue080323</a>
         </p>
     </div>
 
