--- a/entries/opticverve/walkingblue080323.html
+++ b/entries/opticverve/walkingblue080323.html
@@ -56,7 +56,7 @@
     </div>
         
     <div class="mainentryimagebreak">
-        <p>Rebecca Solnit writes about this blue of distance, how that blue is merely a bending of the light. If you were transported over there and looked back, the spot you stood on just a moment before would be blue. I imagine that humans have gazed at the far blue of mountains and felt a longing to be amongst that distant colour, thousands of years before anyone questioned why it even looks that way, why far slopes look like they're calling when things close to us stay quiet.</p>
+        <p>Rebecca Solnit writes about this blue of distance, how it is merely a bending of the light. If you were transported over there and looked back, the spot you stood on just a moment before would be blue. I imagine that humans have gazed at the far blue of mountains and felt a longing to be amongst that distant colour, thousands of years before anyone questioned why it even looks that way, why far slopes look like they're calling when things close to us stay quiet.</p>
     </div>
 
     <div class="images">
@@ -68,7 +68,7 @@
     </div>
 
     <div class="dateentry">
-        Clinton Valley 080322
+        Clinton Valley 080323
     </div>
 </body>
 </html>
