--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/medici.jpg" alt="medici" id="medicipic"><p>holy yellow passage for the medici</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
+        <div class="imgcontainersmallsquare"><img src="./resources/images/ancestors.jpg" alt="terrestrial ancestors, greyed and gazing from the pane" id="ancestorspic"><p>terrestrial ancestors, grey and gazing from the pane</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/church.jpg" alt="godloom" id="churchpic"><p>clockloom</p></div>
 
@@ -151,9 +151,9 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/barkonbark.jpg" alt="bark climbing over bark" id="barkonbarkpic"><p>bark for bark's sake</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/ferns.jpg" alt="kiwi ferns of different shades" id="fernspic"><p>paleozoia</p></div>
+        <div class="imgcontainersmallsquare"><img src="./resources/images/ferns.jpg" alt="kiwi ferns of different shades" id="fernspic"><p>paleozoia</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/mangrove.jpg" alt="mangrove city" id="mangrovepic"><p>mangrove burbs</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/mangrove.jpg" alt="mangrove city" id="mangrovepic"><p>mangrove burbs</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/rootdrop.jpg" alt="huge banyan" id="rootdroppic"><p>rootlord and drooper</p></div>
 
@@ -168,6 +168,12 @@
         <div class="imgcontainershortlandscape"><img src="./resources/images/dawnpatrol.jpg" alt="the dogs at dawn" id="dawnpatrolpic"><p>dawn patrol</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/paua.jpg" alt="grid of paua shells" id="pauapic"><p>paua grid</p></div>
+
+        <div class="imgcontainersmallsquare"><img src="./resources/images/flyingduck.jpg" alt="duck flying across a Milford lake" id="duckpic"><p>unidentified flying duckjet</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/mothwall.jpg" alt="marble mothwall" id="mothwallpic"><p>mothwall</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/waterfall.jpg" alt="waterfall on the Milford track" id="waterfallpic"><p>the centrefold</p></div>
     </div>
 
 </body>
