Add three new pieces and update index

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
     <div class="links">
         <p>
             <a href="./entries/amazonia140522.html">amazonia140522</a>
+            <br><a href="./entries/antiquechurch240323.html">antiquechurch240323</a>
             <br><a href="./entries/bodzin270822.html">bodzin270822</a>
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
+            <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
+            <br><a href="./entries/missedclamsandoldstones100423.html">missedclamsandoldstones100423</a>
             <br><a href="./entries/mythmakers131122.html">mythmakers131122</a>
             <br><a href="./entries/nightbugs031122.html">nightbugs031122</a>
             <br><a href="./entries/pocked170123.html">pocked170123</a>
