add three images to arcade

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </div> 
         <p><span id="cartographertitle"><a href="./entries/projects/cartographer.html">cartographer, cartographer</a></span><span id="cartographerinfo"> - an experiment in how to map disappearing characters</span></p>
         <p><span id="achievementstitle"><a href="./entries/projects/achievements.html">achievements</a></span><span id="achievementsinfo"> - an interview about wanting to be interviewed</span></p>
-        <p><span id="ectobruisetitle"><a href="./entries/projects/ectobruise.html">the ectobruise</a></span><span id="ectobruiseinfo"> - a first foray into interactive fiction, built using the Twine authoring tool</span></p>
-        <p><span id="magicandmachinetitle"><a href="./entries/projects/magicandmachineindex.html">o + +</a></span><span id="magicandmachineinfo"> - systems of play, our imagination, and the working of digital worlds</span></p>
+        <p><span id="ectobruisetitle"><a href="./entries/projects/ectobruise.html">the ectobruise</a></span><span id="ectobruiseinfo"> - a first foray into interactive fiction, built using Twine</span></p>
+        <p><span id="magicandmachinetitle"><a href="./entries/projects/magicandmachineindex.html">o + +</a></span><span id="magicandmachineinfo"> - evolving systems of play, our imagination, and the working of digital worlds</span></p>
     
     <div class="navigationtitle">
         optic verve
@@ -177,6 +177,12 @@
         <div class="imgcontainershortlandscape"><img src="./resources/images/mothwall.jpg" alt="marble mothwall" id="mothwallpic"><p>mothwall</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/waterfall.jpg" alt="waterfall on the Milford track" id="waterfallpic"><p>the centrefold</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/frost.jpg" alt="receding frost on a football pitch" id="frostpic"><p>astrofrost decroaching</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/ivy.jpg" alt="climbing ivy upon the church" id="ivypic"><p>crawl space</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/routeburn.jpg" alt="view from the Routeburn Flats" id="routeburnpic"><p>highs of the routeburn flats</p></div>
     </div>
 
 </body>
