--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <br><a href="./entries/antiquechurch240323.html">antiquechurch240323</a>
             <br><a href="./entries/bodzin270822.html">bodzin270822</a>
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
+            <br><a href="./entries/differentdogs030423.html">differentdogs030423</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
