Edit bomba ink curtain caption and add link to soon to be written collaberrations

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <p><span id="achievementstitle"><a href="./entries/projects/achievements.html">achievements</a></span><span id="achievementsinfo"> - an interview about wanting to be interviewed</span></p>
         <p><span id="ectobruisetitle"><a href="./entries/projects/ectobruise.html">the ectobruise</a></span><span id="ectobruiseinfo"> - a first foray into interactive fiction, built using Twine</span></p>
         <p><span id="magicandmachinetitle"><a href="./entries/projects/magicandmachineindex.html">o + +</a></span><span id="magicandmachineinfo"> - evolving systems of play, our imagination, and the working of digital worlds</span></p>
+        <p><span id="collaberrationstitle"><a href="./entries/projects/collaberrationsindex.html">collaberrations</a></span><span id="collaberrationsinfo"> - essays prompted by other people's art</span></p>
     
     <div class="navigationtitle">
         optic verve
@@ -99,7 +100,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>beachwater ink curtain bomba</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>beachwater bomba and ink curtain shore</p></div>
 
         <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
 
