Add collaberrations and add carbon copy

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <br><a href="./entries/antiquechurch240323.html">antiquechurch240323</a>
             <br><a href="./entries/bodzin270822.html">bodzin270822</a>
             <br><a href="./entries/butterflyrings051022.html">butterflyrings051022</a>
+            <br><a href="./entries/carbonraincopy030523.html">carbonraincopy030523</a>
             <br><a href="./entries/differentdogs030423.html">differentdogs030423</a>
             <br><a href="./entries/dryfishing310722.html">dryfishing310722</a>
             <br><a href="./entries/eastertomb090423.html">eastertomb090423</a>
@@ -57,7 +58,6 @@
         <p><span id="achievementstitle"><a href="./entries/projects/achievements.html">achievements</a></span><span id="achievementsinfo"> - an interview about wanting to be interviewed</span></p>
         <p><span id="ectobruisetitle"><a href="./entries/projects/ectobruise.html">the ectobruise</a></span><span id="ectobruiseinfo"> - a first foray into interactive fiction, built using Twine</span></p>
         <p><span id="magicandmachinetitle"><a href="./entries/projects/magicandmachineindex.html">o + +</a></span><span id="magicandmachineinfo"> - evolving systems of play, our imagination, and the working of digital worlds</span></p>
-        <p><span id="collaberrationstitle"><a href="./entries/projects/collaberrationsindex.html">collaberrations</a></span><span id="collaberrationsinfo"> - essays prompted by other people's art</span></p>
     
     <div class="navigationtitle">
         optic verve
@@ -77,6 +77,12 @@
             <br><a href="./entries/opticverve/walkingblue080323.html">walkingblue080323</a>
         </p>
     </div>
+
+    <div class="projecttitle">
+        collaberrations
+    </div>
+
+    <a href="./entries/collaberrations/guldies.html">guldies</a>
 
     
     <div class="arcadetitle">
