--- a/entries/projects/magicandmachine/47wiredchildren.html
+++ b/entries/projects/magicandmachine/47wiredchildren.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="maintextsection">
-        <p>What will skeletons of the digital age look like? Wired bodies, huddling in corners like children, surrounded by buzz, clicks and chattering lights? Sceptres of aluminium puncturing the sky over flatlands in the near dark, bulb on top to prevent airplanes from impaling themselves?</p>
+        <p>What will skeletons of the digital age look like? Wired bodies, huddling in corners like children, surrounded by buzz, clicks and chattering lights? Sceptres of aluminium puncturing the sky over flatlands in the near dark, bulb on top to prevent aircraft from impaling themselves?</p>
 
         <p>Rows and rows of clever clever silicon. Cavernous intelligence. Underground or under the sea or anywhere.</p>
             
