--- a/index.html
+++ b/index.html
@@ -190,7 +190,9 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/ivy.jpg" alt="climbing ivy upon the church" id="ivypic"><p>crawl space</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/routeburn.jpg" alt="view from the Routeburn Flats" id="routeburnpic"><p>highs of the routeburn flats</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/routeburn.jpg" alt="view from the Routeburn Flats" id="routeburnpic"><p>highs of the routeburn flats</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/christchurchbeach.jpg" alt="sumner beach" id="christchurchbeachpic"><p>where the land things lie</p></div>
     </div>
 
 </body>
