Add images and edit a few

--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
         <div class="imgcontainerhigher"><img src="./resources/images/routeburn.jpg" alt="view from the Routeburn Flats" id="routeburnpic"><p>highs of the routeburn flats</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/christchurchbeach.jpg" alt="sumner beach" id="christchurchbeachpic"><p>where the land things lie</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/loomers.jpg" alt="palm trees in Samoa" id="loomerspic"><p>loomers</p></div>
     </div>
 
 </body>
