Add three images

--- a/index.html
+++ b/index.html
@@ -195,6 +195,12 @@
         <div class="imgcontainerhigher"><img src="./resources/images/christchurchbeach.jpg" alt="sumner beach" id="christchurchbeachpic"><p>where the land things lie</p></div>
 
         <div class="imgcontainershortlandscape"><img src="./resources/images/loomers.jpg" alt="palm trees in Samoa" id="loomerspic"><p>loomers</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/treebleach.jpg" alt="poisoned trees outside Queenstown" id="treebleachpic"><p>tree bleach</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/primed.jpg" alt="a model mule in a glass case" id="mulepic"><p>mule gear</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/landgrab.jpg" alt="West Coast sea fog approaching coast like a spider" id="landgrabpic"><p>land grab</p></div>
     </div>
 
 </body>
