Edit some photos and caption

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
         <div class="imgcontainerportrait"><img src="./resources/images/primed.jpg" alt="a model mule in a glass case" id="mulepic"><p>mule gear</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/landgrab.jpg" alt="West Coast sea fog approaching coast like a spider" id="landgrabpic"><p>land grab</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/landgrab.jpg" alt="West Coast sea fog approaching coast like a spider" id="landgrabpic"><p>landgrab and gullspeck</p></div>
     </div>
 
 </body>
