--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
         <div class="imgcontainerportrait"><img src="./resources/images/primed.jpg" alt="a model mule in a glass case" id="mulepic"><p>mule gear</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/landgrab.jpg" alt="West Coast sea fog approaching coast like a spider" id="landgrabpic"><p>landgrab and gullspeck</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/epithelium.jpg" alt="the alps of Canterbury" id="epitheliumpic"><p>epithelium</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/wallmoth.jpg" alt="Milford fjord wall, patterned like a moth" id="wallmothpic"><p>wallmoth</p></div>
     </div>
 
 </body>
