Add spotting fire

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/skies191122.html">skies191122</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
+            <br><a href="./entries/spottingfirethenfamine120523.html">spottingfirethenfamine120523</a>
             <br><a href="./entries/tallestfall090323.html">tallestfall090323</a>
             <br><a href="./entries/treeavalanche250223.html">treeavalanche250223</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
@@ -203,7 +204,7 @@
         <div class="imgcontainerhigher"><img src="./resources/images/landgrab.jpg" alt="West Coast sea fog approaching coast like a spider" id="landgrabpic"><p>landgrab and gullspeck</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/epithelium.jpg" alt="the alps of Canterbury" id="epitheliumpic"><p>epithelium</p></div>
-
+  
         <div class="imgcontainerportrait"><img src="./resources/images/wallmoth.jpg" alt="Milford fjord wall, patterned like a moth" id="wallmothpic"><p>wallmoth</p></div>
     </div>
 
