--- a/entries/opticverve/fallwater120523.html
+++ b/entries/opticverve/fallwater120523.html
@@ -36,7 +36,7 @@
         <p>
              Water can also be saturated with dirt and yet appear majestically clean. After embracing all manner of pollutants, after taking fallen, filthy bits of the world under its surface, it opaquely refuses to show what it's holding onto, to declare how dirty it is.</p>
              
-             <p>That is, until you test it, or drink it, or feel something fuzz invisibly up against your leg after you've toppled in. That's when it reminds you of its capacity to carry unspeakable things. Perhaps that's why they're hidden, permitted to drift only if they remain unseen.</p> 
+             <p>That is, until you test it, or drink it, or feel something fuzz invisibly against your leg after you've toppled in. That's when it reminds you of its capacity to carry unspeakable things. Perhaps that's why they're hidden, permitted to drift only if they remain unseen.</p> 
         
         <p>We simply can't picture everything that water swallows. We wouldn't want to. We want to marvel at the patterns on the top, comfortably bound by our portion of oxygen and unimpeded light, refreshed by the spindrift and the steady roar, from a safe distance. </p>
     </div>
